syntax = "proto3";

package auth;

option go_package = "/COMMON/auth/proto";

import "google/api/annotations.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
    };
  }

  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }

  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {
    option (google.api.http) = {
      post: "/auth/validate"
      body: "*"
    };
  }
}

enum UserRole {
  UNKNOWN = 0; 
  CUSTOMER = 1;
  ADMIN = 2;
  DELIVERY_PERSON = 3;
  RESTAURANT_WORKER = 4;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  UserRole role = 3; 
}

message RegisterResponse {
  string id = 1;
  string username = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  UserRole role = 3;
}